--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -19,8 +19,15 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark">
 
+    <!-- SPE logo -->
+    <a class="navbar-brand" href="#">
+        <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png"
+             width="160px" height="80px">
+    </a>
+    <!-- SPE logo -->
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -45,9 +52,8 @@
                 <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item dropdown active">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="#">Sign In</a>
             </li>
-
         </ul>
     </div>
 </nav>
