--- a/SPE-website/pages/static/pages/navbar.css
+++ b/SPE-website/pages/static/pages/navbar.css
@@ -2,10 +2,12 @@ nav {
     background-color: #0D4C92;
     height: 90px;
     font-size: 28px;
-    font-family: calibri;
 }
 
 .navbar-nav > li {
     padding-right: 40px;
 }
 
+a.nav-link:hover {
+    opacity: 0.8;
+}
