Added blog home, configured urls in the base template to point to home and blog pages

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,1 +1,21 @@
-<h1>Hello SPE!!!</h1>
+{% extends "pages/base.html" %}
+
+{%block content%}
+    <h1>Hello SPE!!!</h1>
+    <ul>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+    </ul>
+    
+{%endblock content%}
