--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -32,10 +32,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'homepage' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Blogs</a>
+                <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
             </li>
             <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -62,21 +62,7 @@
 </nav>
 <!-- Navbar -->
 
-<ul>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-    <li>SPE</li>
-</ul>
+{% block content %}{% endblock %}
 
 <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark">
