reformatted some lines

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -62,7 +62,8 @@
 </nav>
 <!-- Navbar -->
 
-{% block content %}{% endblock %}
+{% block content %}
+{% endblock content %}
 
 <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark">
