--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,21 +1,21 @@
-{% extends "pages/base.html" %}
+{% extends 'pages/base.html' %}
 
-{%block content%}
-    <h1>Hello SPE!!!</h1>
-    <ul>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-        <li>SPE</li>
-    </ul>
-    
-{%endblock content%}
+{% block content %}
+<h1>Hello SPE!!!</h1>
+<ul>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+    <li>SPE</li>
+</ul>
+
+{% endblock content %}
