top button added

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -17,6 +17,19 @@
         <li>SPE</li>
         <li>SPE</li>
         <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
     </ul>
 
 {% endblock content %}
