--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/body.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/navbar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/top-button.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/footer.css' %}">
 
 </head>
@@ -61,9 +63,15 @@
         </div>
     </nav>
     <!-- Navbar -->
-    <h1></h1>
+
     {% block content %}
     {% endblock content %}
+
+    <!-- Scroll to top Button -->
+        <button id="back-to-top-btn">
+            <i class="material-icons">arrow_upward</i>
+        </button>
+    <!-- Scroll to top Button -->
 
     <!-- Footer -->
     <footer class="page-footer font-small unique-color-dark">
@@ -144,6 +152,7 @@
     <!-- Footer -->
 
     <!-- Javascript -->
+    <script type="text/javascript" src="{% static 'pages/top-button.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
