a little bit of code amended

--- a/SPE-website/pages/static/pages/navbar.css
+++ b/SPE-website/pages/static/pages/navbar.css
@@ -11,3 +11,9 @@ nav {
 a.nav-link:hover {
     opacity: 0.8;
 }
+
+/* Dropdown Menu */
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+/* Dropdown Menu */
