--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -39,24 +39,27 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
                 </li>
+                <!-- Events Dropdown Menu -->
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">Events
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">Event 1</a>
+                        <a class="dropdown-item" href="#">Event 2</a>
+                        <a class="dropdown-item" href="#">Event 3</a>
+                        <a class="dropdown-item" href="#">Event 4</a>
+                        <a class="dropdown-item" href="#">Event 5</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown active">
+                <!-- Events Dropdown Menu -->
+                <li class="nav-item active">
                     <a class="nav-link" href="#">Gallery</a>
                 </li>
-                <li class="nav-item dropdown active">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
-                <li class="nav-item dropdown active">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">Sign In</a>
                 </li>
             </ul>
