--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -30,6 +30,17 @@
         <li>SPE</li>
         <li>SPE</li>
         <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
+        <li>SPE</li>
     </ul>
 
 {% endblock content %}
