--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'pages/navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/footer.css' %}">
 
+    <!--to load header files for blog-->
+    {% block content-blog %}{% endblock %}
+    
 </head>
 
 
