--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -60,15 +60,27 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Sign In</a>
+                    <a class="nav-link" href="{% url 'signup-page' %}">Sign In</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- Navbar -->
 
+    <!-- Messages -->
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+    <!-- Messages -->
+
+    <!-- Page Content -->
     {% block content %}
     {% endblock content %}
+    <!-- Page Content -->
 
     <!-- Scroll to top Button -->
         <button id="back-to-top-btn">
