Sign Up page added (still a bit left)

--- a/SPE-website/user/static/user/signup.css
+++ b/SPE-website/user/static/user/signup.css
@@ -1,12 +1,14 @@
 body {
     box-sizing: border-box;
+    background-image: url('https://texashillcountry.com/wp-content/uploads/Texas-Oil-Field-Wiki-commons.jpg')
 }
 
 div.content-section {
     width:600px;
-    border: 2px solid black;
     padding: 50px;
     margin: 80px;
+    background-color: white;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
 }
 
 
