Sign Up page added, can't yet signup

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'pages/top-button.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/footer.css' %}">
 
+    <!--to load header files for blog-->
+    {% block content-blog %}{% endblock %}
+    
 </head>
 
 
