--- a/SPE-website/pages/static/pages/scroll-to-top-button.css
+++ b/SPE-website/pages/static/pages/scroll-to-top-button.css
@@ -7,7 +7,7 @@
     border-radius: 50%;
     border: none;
     outline: none;
-    background-color: #ff0800;
+    background-color: #484848;
     color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     color: white;
