--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/body.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/navbar.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'pages/top-button.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/scroll-to-top-button.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/footer.css' %}">
 
     <!--to load header files for blog-->
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'homepage' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'homepage' %}">Home</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
@@ -63,7 +63,7 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'signup-page' %}">Sign In</a>
+                    <a class="nav-link" href="{% url 'signin-page' %}">Sign In</a>
                 </li>
             </ul>
         </div>
