--- a/SPE-website/blog/templates/blog/post_detail.html
+++ b/SPE-website/blog/templates/blog/post_detail.html
@@ -14,11 +14,11 @@
     <p> </p>
     <div class="article-metadata">
         Author: 
-        <a class="mr-2" href="#">{{ object.author }}</a>
+        <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
         <small class="text-muted">{{ object.date_posted|date:"M j, Y"}}</small>
     </div>
 
-    <img src="{{ object.image.url }}">
+    <img style="width: 80%;"src ="{{ object.image.url }}">
     
     <p class="article-content">{{ object.content }}</p>
     </div>
