spaces, indentation, comments added didn't do the css files yet coz i was boed ;)

--- a/SPE-website/blog/templates/blog/home.html
+++ b/SPE-website/blog/templates/blog/home.html
@@ -1,46 +1,57 @@
 {% extends "pages/base.html" %}
-{%load static%}
+{% load static %}
 
-{% block content-blog %}
-<link rel="stylesheet" type="text/css" href="{% static 'blog/blog-main.css' %}">
-{% endblock %}
+    <!-- Adding stylesheet to base template -->
+    {% block content-blog %}
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-main.css' %}">
+    {% endblock content-blog %}
+    <!-- Adding stylesheet to base template -->
 
-{% block content%}
-    <div class="col-md-8" style="padding-left: 5%;">
-        <p> </p>
-        <h1>SPE blog</h1>
-        <hr>
-        {%for post in posts%}
-        <article class="media content-section">
-            <div class="media-body">
-            <div class="article-metadata">
-                <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date_posted|date:"M j, Y"}}</small>
-            </div>
-            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
-            </div>
-        </article>
-        <p> </p>
-        {%endfor%}
-    <div style = "text-align:center;">
-        {% if is_paginated %}
-            {% if page_obj.has_previous %}
-                <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-                <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-            {%endif%}
-            {% for num in page_obj.paginator.page_range %}
-                {% if page_obj.number == num %}
-                    <a class="btn btn-info mb-4" href="?page={{ num }}">{{num}}</a>
-                {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
-                <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{num}}</a>
-                {% endif %}
+    {% block content %}
+        <div class="col-md-8" style="padding-left: 5%;">
+            <h1>SPE blog</h1>
+            <hr>
+
+            <!-- Blog Post body -->
+            {% for post in posts %}
+                <article class="media content-section">
+                    <div class="media-body">
+                    <div class="article-metadata">
+                        <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
+                        <small class="text-muted">{{ post.date_posted|date:"M j, Y"}}</small>
+                    </div>
+                    <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+                    <p class="article-content">{{ post.content }}</p>
+                    </div>
+                </article>
             {% endfor %}
-            {% if page_obj.has_next %}
-                <a class="btn btn-outline-info mb-4" href="?page={{page_obj.next_page_number}}">Next</a>
-                <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-            {%endif%}
-        {%endif%}
+            <!-- Blog Post body -->
+
+        <!-- Next/Previous Button Group -->
+        <div style = "text-align:center;">
+            {% if is_paginated %}
+
+                {% if page_obj.has_previous %}
+                    <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                {% endif %}
+
+                {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %}
+                        <a class="btn btn-info mb-4" href="?page={{ num }}">{{num}}</a>
+                    {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
+                        <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{num}}</a>
+                    {% endif %}
+                {% endfor %}
+
+                {% if page_obj.has_next %}
+                    <a class="btn btn-outline-info mb-4" href="?page={{page_obj.next_page_number}}">Next</a>
+                    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+                {% endif %}
+
+            {% endif %}
+            </div>
         </div>
-    </div>
-{%endblock content%}
+    <!-- Next/Previous Button Group -->
+
+    {% endblock content %}
