--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -63,9 +63,17 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'signin-page' %}">Sign In</a>
-                </li>
+
+                {% if user.is_authenticated %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'signout-page' %}">Sign Out</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'signin-page' %}">Sign In</a>
+                    </li>
+                {% endif %}
+
             </ul>
         </div>
     </nav>
