--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -35,17 +35,25 @@
         </a>
         <!-- SPE logo -->
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <!--not works properly still in testing-->
+    <!--to add toggle button-->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggle">
+    <!--to add button end-->
+    <!--/not works properly.-->
+
+        <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'homepage' %}">Home</a>
-                </li>
+                    <a class="nav-item nav-link" href="{% url 'homepage' %}">Home</a>
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
                 </li>
                 <!-- Events Dropdown Menu -->
                 <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="{% url 'events-home' %}" id="navbarDropdown" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">Events
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
