events button changed from dropdown to normal

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -51,20 +51,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
                 </li>
-                <!-- Events Dropdown Menu -->
-                <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="{% url 'events-home' %}" id="navbarDropdown" role="button" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">Events
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Event 1</a>
-                        <a class="dropdown-item" href="#">Event 2</a>
-                        <a class="dropdown-item" href="#">Event 3</a>
-                        <a class="dropdown-item" href="#">Event 4</a>
-                        <a class="dropdown-item" href="#">Event 5</a>
-                    </div>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Events</a>
                 </li>
-                <!-- Events Dropdown Menu -->
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Gallery</a>
                 </li>
