--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,7 +1,5 @@
-{% extends 'pages/base.html' %}
-
-{% block content %}
-
+{% extends 'pages/base.html' %} {% block content %}
+<div class="container" style="padding-top:100px;">
     <h1>Hello SPE!!!</h1>
     <ul>
         <li>SPE</li>
@@ -42,5 +40,6 @@
         <li>SPE</li>
         <li>SPE</li>
     </ul>
+</div>
 
 {% endblock content %}
