--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'pages/navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/scroll-to-top-button.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/footer.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
 
     <!-- to load header files for blog -->
     {% block content-blog %} {% endblock content-blog %}
@@ -27,7 +28,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#26416c;">
         <div class="container-fluid">
-            <a href="https://www.spe.org/en/" class="navbar-brand">
+            <a href="{% url 'homepage' %}" class="navbar-brand">
                 <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png" width="170px" height="80px">
             </a>
 
@@ -140,78 +141,141 @@
     <!-- Scroll to top Button -->
 
     <!-- Footer -->
-    <footer class="page-footer font-small unique-color-dark">
 
-        <div id="upper-footer">
+    <footer>
+        <div class="footer-top">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-3 footer-about">
+                        <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png" alt="logo-footer">
+                        <!-- <p>
+                            SPE IIT(ISM) Student Chapter
+                        </p> -->
+                    </div>
+                    <div class="col-md-4 offset-md-1 footer-contact wow fadeInDown">
+                        <h3>Contact</h3>
+                        <p><i class="fas fa-map-marker-alt"></i> Department of Petroleum Engineering, IIT (ISM) Dhanbad (695.89 km) 826004 Dhanbad, Jharkhand, India</p>
+                        <p><i class="fas fa-phone"></i> Phone: 087098 43266</p>
+                        <p><i class="fas fa-envelope"></i> Email: <a href="#">speiitismsc@domain.com</a></p>
+                    </div>
+                    <div class="col-md-4 footer-links wow fadeInUp">
+                        <div class="row">
+                            <div class="col">
+                                <h3>Links</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p><a class="scroll-link" href="{% url 'homepage' %}">Home</a></p>
+                                <p><a href="#">About us</a></p>
+                                <p><a href="#">Resources</a></p>
+                                <p><a href="#">Events</a></p>
+                            </div>
+                            <div class="col-md-6">
+                                <p><a href="#">Gallery</p>
+                                <p><a href="#">Contact</a></p>
+                                <p><a href="#">Our Team</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
             <div class="container">
-
-                <!-- Grid row-->
-                <div class="row py-4 d-flex align-items-center">
-
-                    <!-- Grid column -->
-                    <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-                        <h6 class="mb-0">Get connected with us on social networks!</h6>
+                <div class="row">
+                    <div class="col-md-6 footer-copyright">
+                        Copyright © 2020 All rights reserved | SPE IIT(ISM) Student Chapter
                     </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column social media icons -->
-                    <div class="col-md-6 col-lg-7 text-center text-md-right">
-                        <a class="fb-ic" href="#">
-                            <i class="fa fa-facebook-f"> </i>
-                        </a>
-                        <a class="li-ic" href="#">
-                            <i class="fa fa-linkedin"> </i>
-                        </a>
-                        <a class="ins-ic" href="#">
-                            <i class="fa fa-instagram"></i>
-                        </a>
+                    <div class="col-md-6 footer-social">
+                        <p style="display: inline;">Follow us on : </p>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
                     </div>
-                    <!-- Grid column social media icons -->
-
                 </div>
-                <!-- Grid row-->
-
             </div>
         </div>
-
-        <!-- Footer Links -->
-        <div id="lower-footer">
-            <div class="container text-center text-md-left mt-5">
-
-                <!-- Grid row -->
-                <div class="row mt-3">
-
-                    <!-- Grid column -->
-                    <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-4">
-                        <!-- Content -->
-                        <h6 class="text-uppercase font-weight-bold">SPE IIT ISM SC</h6>
-                        <hr class="accent-2 mb-4 mt-0 d-inline-block mx-auto">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis gravida dolor. Nullam maximus velit non dui faucibus, et eleifend lorem ultrices. Aliquam erat volutpat. Donec non finibus dui. Curabitur non elit ac augue hendrerit
-                            facilisis. Nulla ipsum tellus, tempor sit amet ligula luctus, ornare fermentum dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In commodo magna leo, sit amet pharetra orci
-                            pellentesque eu.</p>
-                        <!-- Content -->
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                        <hr class="accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                        <p><i class="fa fa-home mr-3"></i> Dhanbad, India </p>
-                        <p><i class="fa fa-envelope mr-3"></i> developers@mail.com </p>
-                        <p><i class="fa fa-phone mr-3"></i> + 01 234 567 88 </p>
-                    </div>
-                    <!-- Grid column -->
-
-                </div>
-                <!-- Grid row -->
-
-            </div>
-        </div>
-        <!-- Footer Links -->
-
     </footer>
+
+
+
+
+
+    <!-- <footer class="page-footer font-small unique-color-dark"> -->
+
+    <!-- <div id="upper-footer">
+            <div class="container"> -->
+
+    <!-- Grid row -->
+    <!-- <div class="row py-4 d-flex align-items-center"> -->
+
+    <!-- Grid column -->
+    <!-- <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+            <h6 class="mb-0">Get connected with us on social networks!</h6>
+        </div> -->
+    <!-- Grid column -->
+
+    <!-- Grid column social media icons -->
+    <!-- <div class="col-md-6 col-lg-7 text-center text-md-right">
+            <a class="fb-ic" href="#">
+                <i class="fa fa-facebook-f"> </i>
+            </a>
+            <a class="li-ic" href="#">
+                <i class="fa fa-linkedin"> </i>
+            </a>
+            <a class="ins-ic" href="#">
+                <i class="fa fa-instagram"></i>
+            </a>
+        </div> -->
+    <!-- Grid column social media icons -->
+    <!-- 
+    </div> -->
+    <!-- Grid row-->
+    <!-- 
+    </div>
+    </div> -->
+
+    <!-- Footer Links -->
+    <!-- <div id="lower-footer">
+        <div class="container text-center text-md-left mt-5"> -->
+
+    <!-- Grid row -->
+    <!-- <div class="row mt-3"> -->
+
+    <!-- Grid column -->
+    <!-- <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mb-4"> -->
+    <!-- Content -->
+    <!-- <h6 class="text-uppercase font-weight-bold">SPE IIT ISM SC</h6>
+                    <hr class="accent-2 mb-4 mt-0 d-inline-block mx-auto">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis gravida dolor. Nullam maximus velit non dui faucibus, et eleifend lorem ultrices. Aliquam erat volutpat. Donec non finibus dui. Curabitur non elit ac augue hendrerit
+                        facilisis. Nulla ipsum tellus, tempor sit amet ligula luctus, ornare fermentum dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In commodo magna leo, sit amet pharetra orci pellentesque
+                        eu.
+                    </p> -->
+    <!-- Content -->
+    <!-- </div> -->
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <!-- <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-4"> -->
+    <!-- Links -->
+    <!-- <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                    <hr class="accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p><i class="fa fa-home mr-3"></i> Dhanbad, India </p>
+                    <p><i class="fa fa-envelope mr-3"></i> developers@mail.com </p>
+                    <p><i class="fa fa-phone mr-3"></i> + 01 234 567 88 </p>
+                </div> -->
+    <!-- Grid column -->
+
+    <!-- </div> -->
+    <!-- Grid row -->
+
+    <!-- </div>
+    </div> -->
+    <!-- Footer Links -->
+
+    <!-- </footer> -->
     <!-- Footer -->
 
     <!-- Javascript -->
